@@ -3,14 +3,15 @@ package com.Heart2Hub.Heart2Hub_Backend.service;
 import com.Heart2Hub.Heart2Hub_Backend.entity.ImageDocument;
 import com.Heart2Hub.Heart2Hub_Backend.entity.Post;
 import com.Heart2Hub.Heart2Hub_Backend.entity.Staff;
-import com.Heart2Hub.Heart2Hub_Backend.exception.UnableToCreateImageDocumentException;
-import com.Heart2Hub.Heart2Hub_Backend.exception.UnableToUpdateTreatmentPlanRecordException;
+import com.Heart2Hub.Heart2Hub_Backend.exception.*;
 import com.Heart2Hub.Heart2Hub_Backend.repository.PostRepository;
 import com.Heart2Hub.Heart2Hub_Backend.repository.StaffRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -27,8 +28,15 @@ public class PostService {
     }
 
     public Staff findPostAuthor(Long postId) {
-        Staff staff = postRepository.findById(postId).get().getStaff();
-        return staffRepository.findById(staff.getStaffId()).get();
+        Optional<Post> postOptional = postRepository.findById(postId);
+
+        if (postOptional.isEmpty()) {
+            throw new PostNotFoundException("Post not found with id: " + postId);
+        }
+
+        Post post = postOptional.get();
+        Staff staff = post.getStaff();
+        return staffRepository.findById(staff.getStaffId()).orElseThrow(() -> new StaffNotFoundException("Staff not found with id: " + staff.getStaffId()));
     }
 
     public List<Post> getAllPosts() {
@@ -36,15 +44,19 @@ public class PostService {
     }
 
     public Post getPostById(Long id) {
-        return postRepository.findById(id).get();
+
+        return postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found with id: " + id));
+
     }
 
     public Post createPost(Post post, Long staffId, ImageDocument imageDocument) {
-        Staff staff = staffRepository.findById(staffId).get();
+        Staff staff = staffRepository.findById(staffId)
+                .orElseThrow(() -> new StaffNotFoundException("Staff not found with id: " + staffId));
+
         post.setStaff(staff);
+
         if (imageDocument != null) {
-            ImageDocument createdImageDocument = imageDocumentService.createImageDocument(
-                    imageDocument);
+            ImageDocument createdImageDocument = imageDocumentService.createImageDocument(imageDocument);
             post.getListOfImageDocuments().add(createdImageDocument);
         }
 
@@ -57,46 +69,68 @@ public class PostService {
     }
 
     public Post addImageToPost(ImageDocument imageDocument, Long postId) {
-        Post post = postRepository.findById(postId).get();
-        if (imageDocument != null) {
-            ImageDocument createdImageDocument = imageDocumentService.createImageDocument(
-                    imageDocument);
-            post.getListOfImageDocuments().add(createdImageDocument);
+        Optional<Post> optionalPost = postRepository.findById(postId);
+        if (optionalPost.isPresent()) {
+            Post post = optionalPost.get();
+            if (imageDocument != null) {
+                ImageDocument createdImageDocument = imageDocumentService.createImageDocument(imageDocument);
+                post.getListOfImageDocuments().add(createdImageDocument);
+            }
+            post = postRepository.save(post);
+            return post;
+        } else {
+            throw new PostNotFoundException("Post not found with id: " + postId);
         }
-        post = postRepository.save(post);
-        return post;
     }
 
     public Post removeImageFromPost(String imageLink, Long postId) {
-        Post post = postRepository.findById(postId).get();
-        List<ImageDocument> imageDocumentToRemove = post.getListOfImageDocuments()
-                .stream().filter(imageDocument -> imageDocument.getImageLink().equals(imageLink)).toList();
-        if (imageDocumentToRemove.isEmpty()) {
-            throw new UnableToUpdateTreatmentPlanRecordException("No image exist");
+        Optional<Post> optionalPost = postRepository.findById(postId);
+        if (optionalPost.isPresent()) {
+            Post post = optionalPost.get();
+
+            List<ImageDocument> imageDocumentToRemove = post.getListOfImageDocuments()
+                    .stream()
+                    .filter(imageDocument -> {
+                        String link = imageDocument.getImageLink();
+                        return link != null && link.equals(imageLink);
+                    })
+                    .collect(Collectors.toList());
+
+            if (imageDocumentToRemove.isEmpty()) {
+                throw new UnableToRemoveImageException("No image exists");
+            }
+
+            ImageDocument imageDocument = imageDocumentToRemove.get(0);
+            post.getListOfImageDocuments().remove(imageDocument);
+            post = postRepository.save(post);
+
+            return post;
+        } else {
+            throw new PostNotFoundException("Post not found with id: " + postId);
         }
-        ImageDocument imageDocument = imageDocumentToRemove.get(0);
-        post.getListOfImageDocuments().remove(imageDocument);
-        post = postRepository.save(post);
-        return post;
     }
 
+
+
     public Post updatePost(Long postId, Post post) {
-            Post oldPost = postRepository.findById(postId).get();
-            oldPost.setPostTypeEnum(post.getPostTypeEnum());
-            oldPost.setTitle(post.getTitle());
-            oldPost.setBody(post.getBody());
+        Post oldPost = postRepository.findById(postId)
+                .orElseThrow(() -> new PostNotFoundException("Post not found with id: " + postId));
 
-            postRepository.save(oldPost);
+        oldPost.setPostTypeEnum(post.getPostTypeEnum());
+        oldPost.setTitle(post.getTitle());
+        oldPost.setBody(post.getBody());
 
-            return oldPost;
+        postRepository.save(oldPost);
+
+        return oldPost;
     }
 
     public void deletePost(Long postId) {
-        Post post = postRepository.findById(postId).get();
+        Post post = postRepository.findById(postId).orElseThrow(() -> new PostNotFoundException("Post not found with id: " + postId));
         Staff staff = staffRepository.findById(post.getStaff().getStaffId()).get();
         staff.getListOfPosts().remove(post);
 
         postRepository.delete(post);
-
     }
+
 }
